manifests/keycloak/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: homelab
    namespace: envoy-gateway
  hostnames:
  - keycloak.newgamer.lan
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: keycloak
      port: 8080
      weight: 1
